Make all gcc warnings into errors
Take advantage of compiling tools to detect subtle issues.

-----------------------------------------------------------------
bochs@f24:~/linux-0.01$ make
as -32 -c -o boot/head.o boot/head.s
gcc -Wall -O -fstrength-reduce -fomit-frame-pointer \
-nostdinc -Iinclude -c -o init/main.o init/main.c
In file included from init/main.c:2:0:
include/unistd.h:201:1: warning: function return types not compatible due to ‘volatile’
 volatile void exit(int status);
 ^~~~~~~~
include/unistd.h:201:1: warning: function return types not compatible due to ‘volatile’
include/unistd.h:202:1: warning: function return types not compatible due to ‘volatile’
 volatile void _exit(int status);
 ^~~~~~~~
include/unistd.h:202:1: warning: function return types not compatible due to ‘volatile’
In file included from init/main.c:3:0:
include/time.h:39:8: warning: conflicting types for built-in function ‘strftime’
 size_t strftime(char * s, size_t smax, const char * fmt, const struct tm * tp);
        ^~~~~~~~
In file included from init/main.c:2:0:
-----------------------------------------------------------------

Signed-off-by: Honggang Li <honggangli@163.com>

--- a/fs/Makefile
+++ b/fs/Makefile
@@ -3,7 +3,7 @@ AS	=as
 CC	=gcc
 LD	=gld
 CFLAGS	=-Wall -O -fstrength-reduce  -fomit-frame-pointer \
-	-mstring-insns -nostdinc -I../include
+	-mstring-insns -nostdinc -I../include -Werror
 CPP	=gcc -E -nostdinc -I../include
 
 .c.s:
