--- a/mm/Makefile
+++ b/mm/Makefile
@@ -1,6 +1,6 @@
 CC	=gcc
 CFLAGS	=-O -Wall -fstrength-reduce  -fomit-frame-pointer \
-	-finline-functions -nostdinc -I../include
+	-finline-functions -nostdinc -I../include -Werror
 AS	=as
 AR	=gar
 LD	=gld
