--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -12,7 +12,7 @@ LD	=gld
 LDFLAGS	=-s -x
 CC	=gcc
 CFLAGS	=-Wall -O -fstrength-reduce -fomit-frame-pointer  \
-	-finline-functions -mstring-insns -nostdinc -I../include
+	-finline-functions -mstring-insns -nostdinc -I../include -Werror
 CPP	=gcc -E -nostdinc -I../include
 
 .c.s:
