--- a/lib/Makefile
+++ b/lib/Makefile
@@ -11,7 +11,7 @@ AS	=as
 LD	=gld
 LDFLAGS	=-s -x
 CC	=gcc
-CFLAGS	=-Wall -O -fstrength-reduce -fomit-frame-pointer  \
+CFLAGS	=-m32 -Wall -O -fstrength-reduce -fomit-frame-pointer  \
 	-finline-functions -mstring-insns -nostdinc -I../include -Werror \
 	-fno-builtin
 CPP	=gcc -E -nostdinc -I../include
