--- a/mm/Makefile
+++ b/mm/Makefile
@@ -1,5 +1,5 @@
 CC	=gcc
-CFLAGS	=-O -Wall -fstrength-reduce  -fomit-frame-pointer \
+CFLAGS	=-m32 -O -Wall -fstrength-reduce  -fomit-frame-pointer \
 	-finline-functions -nostdinc -I../include -Werror
 AS	=as
 AR	=gar
