Remove unrecognized gcc command line option ‘-mstring-insns’
-----------------------------------------------------------------
[bochs@f24 linux-0.01]$ make
(cd kernel; make)
make[1]: Entering directory '/home/bochs/linux-0.01/kernel'
gcc -m32 -Wall -O -fstrength-reduce -fomit-frame-pointer -finline-functions -mstring-insns -nostdinc -I../include -Werror -fno-builtin \
-c -o sched.o sched.c
gcc: error: unrecognized command line option ‘-mstring-insns’; did you mean ‘-fstrict-enums’?
Makefile:25: recipe for target 'sched.o' failed
-----------------------------------------------------------------

Signed-off-by: Honggang Li <honggangli@163.com>

--- a/fs/Makefile
+++ b/fs/Makefile
@@ -3,7 +3,7 @@ AS	=as
 CC	=gcc
 LD	=gld
 CFLAGS	=-m32 -Wall -O -fstrength-reduce  -fomit-frame-pointer \
-	-mstring-insns -nostdinc -I../include -Werror -fno-builtin
+	-nostdinc -I../include -Werror -fno-builtin
 CPP	=gcc -E -nostdinc -I../include
 
 .c.s:
