Warn for variables incremented but not used
https://gcc.gnu.org/bugzilla/show_bug.cgi?id=44677

-----------------------------------------------------------------
bochs@f24:~/linux-0.01$ make
(cd kernel; make)
make[1]: Entering directory '/home/bochs/linux-0.01/kernel'
gcc -m32 -Wall -O -fstrength-reduce -fomit-frame-pointer -finline-functions -nostdinc -I../include -Werror -fno-builtin \
-c -o vsprintf.o vsprintf.c
vsprintf.c: In function ‘vsprintf’:
vsprintf.c:101:6: error: variable ‘qualifier’ set but not used [-Werror=unused-but-set-variable]
  int qualifier;  /* 'h', 'l', or 'L' for integer fields */
      ^~~~~~~~~
cc1: all warnings being treated as errors
Makefile:25: recipe for target 'vsprintf.o' failed
make[1]: *** [vsprintf.o] Error 1
make[1]: Leaving directory '/home/bochs/linux-0.01/kernel'
Makefile:51: recipe for target 'kernel/kernel.o' failed
make: *** [kernel/kernel.o] Error 2
-----------------------------------------------------------------

Signed-off-by: Honggang Li <honggangli@163.com>

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -14,6 +14,9 @@ CC	=gcc
 CFLAGS	=-m32 -Wall -O -fstrength-reduce -fomit-frame-pointer  \
 	-finline-functions -nostdinc -I../include -Werror \
 	-fno-builtin
+EXTRA_CFLAGS	=-m32 -Wall -O -fstrength-reduce -fomit-frame-pointer  \
+	-finline-functions -nostdinc -I../include -Werror -Wno-unused-but-set-variable \
+	-fno-builtin
 CPP	=gcc -E -nostdinc -I../include
 
 .c.s:
@@ -26,13 +29,16 @@ CPP	=gcc -E -nostdinc -I../include
 	-c -o $*.o $<
 
 OBJS  = sched.o system_call.o traps.o asm.o fork.o \
-	panic.o printk.o vsprintf.o tty_io.o console.o \
+	panic.o printk.o tty_io.o console.o \
 	keyboard.o rs_io.o hd.o sys.o exit.o serial.o \
 	mktime.o
 
-kernel.o: $(OBJS)
+kernel.o: vsprintf.o $(OBJS)
 	$(LD) -r -o kernel.o $(OBJS)
 	sync
+
+vsprintf.o:
+	$(CC) $(EXTRA_CFLAGS) -c -o $*.o $<
 
 clean:
 	rm -f core *.o *.a tmp_make
