Fix minor issues to compile tty_io.c
-----------------------------------------------------------------
bochs@f24:~/linux-0.01$ make
(cd kernel; make)
make[1]: Entering directory '/home/bochs/linux-0.01/kernel'
gcc -m32 -Wall -O -fstrength-reduce -fomit-frame-pointer -finline-functions -nostdinc -I../include -Werror -fno-builtin \
-c -o tty_io.o tty_io.c
In file included from tty_io.c:6:0:
tty_io.c: In function ‘copy_to_cooked’:
../include/ctype.h:25:31: error: array subscript has type ‘char’ [-Werror=char-subscripts]
 #define isupper(c) ((_ctype+1)[c]&(_U))
                               ^
../include/ctype.h:31:29: note: in expansion of macro ‘isupper’
 #define tolower(c) (_ctmp=c,isupper(_ctmp)?_ctmp+('a'+'A'):_ctmp)
                             ^~~~~~~
tty_io.c:144:6: note: in expansion of macro ‘tolower’
    c=tolower(c);
      ^~~~~~~
tty_io.c: In function ‘tty_read’:
tty_io.c:209:3: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   if (flag=(!oldalarm || time+jiffies<oldalarm))
   ^~
tty_io.c:239:4: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
    if (flag=(!oldalarm || time+jiffies<oldalarm))
    ^~
tty_io.c:238:6: error: suggest explicit braces to avoid ambiguous ‘else’ [-Werror=parentheses]
   if (time && !L_CANON(tty))
      ^
tty_io.c: In function ‘tty_write’:
tty_io.c:257:9: error: type defaults to ‘int’ in declaration of ‘cr_flag’ [-Werror=implicit-int]
  static cr_flag=0;
         ^~~~~~~
In file included from tty_io.c:6:0:
../include/ctype.h:21:31: error: array subscript has type ‘char’ [-Werror=char-subscripts]
 #define islower(c) ((_ctype+1)[c]&(_L))
                               ^
../include/ctype.h:32:29: note: in expansion of macro ‘islower’
 #define toupper(c) (_ctmp=c,islower(_ctmp)?_ctmp+('A'-'a'):_ctmp)
                             ^~~~~~~
tty_io.c:280:8: note: in expansion of macro ‘toupper’
      c=toupper(c);
        ^~~~~~~
cc1: all warnings being treated as

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -16,7 +16,7 @@ CFLAGS	=-m32 -Wall -O -fstrength-reduce -fomit-frame-pointer  \
 	-fno-builtin
 EXTRA_CFLAGS	=-m32 -Wall -O -fstrength-reduce -fomit-frame-pointer  \
 	-finline-functions -nostdinc -I../include -Werror -Wno-unused-but-set-variable \
-	-fno-builtin
+	-fno-builtin -Wno-char-subscripts
 CPP	=gcc -E -nostdinc -I../include
 
 .c.s:
@@ -29,15 +29,15 @@ CPP	=gcc -E -nostdinc -I../include
 	-c -o $*.o $<
 
 OBJS  = sched.o system_call.o traps.o asm.o fork.o \
-	panic.o printk.o tty_io.o console.o \
+	panic.o printk.o console.o \
 	keyboard.o rs_io.o hd.o sys.o exit.o serial.o \
 	mktime.o
 
-kernel.o: vsprintf.o $(OBJS)
+kernel.o: vsprintf.o tty_io.o $(OBJS)
 	$(LD) -r -o kernel.o $(OBJS)
 	sync
 
-vsprintf.o:
+vsprintf.o tty_io.o:
 	$(CC) $(EXTRA_CFLAGS) -c -o $*.o $<
 
 clean:
