Set elf_i386 as ld default target
------------------------------------------------------------------
ld -r -o kernel.o sched.o system_call.o traps.o asm.o fork.o panic.o printk.o console.o keyboard.o rs_io.o hd.o sys.o exit.o serial.o mktime.o
ld: Relocatable linking with relocations from format elf32-i386 (sched.o) to format elf64-x86-64 (kernel.o) is not supported
Makefile:37: recipe for target 'kernel.o' failed
------------------------------------------------------------------

Signed-off-by: Honggang Li <honggangli@163.com>

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -9,7 +9,7 @@
 AR	=gar
 AS	=as
 LD	=ld
-LDFLAGS	=-s -x
+LDFLAGS	=-m elf_i386 -x
 CC	=gcc
 CFLAGS	=-m32 -Wall -O -fstrength-reduce -fomit-frame-pointer  \
 	-finline-functions -nostdinc -I../include -Werror \
@@ -34,7 +34,7 @@ OBJS  = sched.o system_call.o traps.o asm.o fork.o \
 	mktime.o
 
 kernel.o: vsprintf.o tty_io.o $(OBJS)
-	$(LD) -r -o kernel.o $(OBJS)
+	$(LD) $(LDFLAGS) -r -o kernel.o $(OBJS)
 	sync
 
 vsprintf.o tty_io.o:
